<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewProduct">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/product_image_selector"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            app:civ_circle_background_color="@color/white"
            android:src="@drawable/product_default_image" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignRight="@id/product_image_selector"
            android:layout_alignBottom="@id/product_image_selector"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:tint="@color/colorGrey1"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:paddingRight="16dp"
            android:text="@string/product_name"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:nextFocusDown="@id/category_spinner"
            tools:text="Milk" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:paddingRight="16dp"
            android:text="@string/category"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/product_category_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:nextFocusDown="@id/product_price_edit_text"
            tools:text="milks" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:nextFocusDown="@id/product_price_text_edit"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:paddingRight="16dp"
            android:text="@string/price"
            android:textAllCaps="true" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:paddingRight="50dp"
                tools:text="9.5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:text="EPG"
                android:textSize="18sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:paddingRight="16dp"
            android:text="@string/in_stock"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/product_in_stock_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:checked="true" />

            <TextView
                android:id="@+id/product_in_stock_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>